--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,98 +1,65 @@
-
-#fondo {
-    background-image: url("../img/nubes.png");
-    background-size: cover;
-    background-position:1px;
-    width: 1500px;
-    height: 600px;
-    padding: 100px;
-    
-     
-
-}
-
-.card {
-    top:20px;
-    right: 1px;
-
-}
-
-
-.container-fluid {
-    height: 250px;
+.navegador {
+    height: 50vh;
+    width: 100%;
     font-size: 35px;
     background-image: url("../img/ciudad.gif");
-}
-
-.container {
- color: black;
- 
- 
-}
- 
-
-.letra {
-    color: rgb(0, 0, 0);
-    font-size: 150%;
-    text-align:center;
-    
-
-
-}
-
-
-
-.estudio {
+    background-size: cover;
+    display: flex;
+    align-items: end;
+  }
+  
+  #fondo {
+    background-image: url("../img/nubes.png");
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+  }
+  
+  .card {
+    top: 20px;
+    right: 1px;
+  }
+  
+  .menu {
+    justify-content: center;
+  }
+  
+  .estudio {
     text-align: center;
     font-size: 200%;
-    padding:30px;
-    background-color: #759dad;
-    
-}
-
-.experiencia-laboral {
     padding: 30px;
+    background-color: #759dad;
+  }
+  
+  .experiencia-laboral {
+    padding: 30px;
+    margin-bottom: 0;
     text-align: center;
     font-size: 200%;
     bottom: 200px;
-    background-color: #759dad
-    
-}
-
-.carousel-item {
-    height: 1000px;
-
-}
-
-.carousel-inner {
-    height: 800px;
-    padding: 300px;
-    bottom: 200px;
-}
-
-.portafolio {
+    background-color: #76c1df;
+  }
+  
+  .port {
     padding: 30px;
     text-align: center;
     font-size: 200%;
     background-color: #759dad;
-    
-    
+  }
+  
+  .tope {
+    height: 350px;
+    padding: 10px;
+  }
+  
+  .card-img-top {
+    height: 100%;
+  }
+  
+  .mb-2 {
+    background-color: #759dad;
+  }
 
-}
-
-.card-img-top {
-   height: 350px;
-   padding: 10px;
-   
-    
-}
-
-
-
-.mb-2 {
- background-color:#759dad;
-
-}
 
 
 
